additional features for interactive rebase